--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.7.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
+    "firebase": "^9.12.0",
     "jquery": "^3.6.1",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
