--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
